--- a/index.html
+++ b/index.html
@@ -10,7 +10,52 @@
 </head>
 
 <body>
+    <header>
+        <nav id="nav-container">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Events</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <div class="content-container">
+
+        <div id="welcome-box" class="welcome-box-container">
+            <div class="welcome-text-container">
+                <h1>Welcome to <br> Cultivate Arts</h1>
+                <h3>A showcase of handmade gifts and products</h3>
+                <button id="welcome-button">
+                    Let's get started
+                </button>
+            </div>
+            <div id="yellow-box"></div>
+            <div id="dark-green-box"></div>
+        </div>
+
+        <div id="whats-new" class="whats-new-container">
+            <div class="left-line"></div>
+            <div class="right-line"></div>
+            <h2>What's new in store</h2>
+
+            <div class="featured-items-container">
+                <div class="featured-item-card">
+                </div>
+                <div class="featured-item-card item2">
+                </div>
+                <div class="featured-item-card item3">
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+
+
+    </div>
 </body>
 
 </html>
