updated for validation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="nav-item"><a href="https://github.com" class="nav-link">About</a></li>
                 <li class="nav-item">
                     <div class="nav-logo-container">
-                        <img src="./images/navlogo.png" alt="Cultivate Arts" class='nav-logo'></img>
+                        <img src="./images/navlogo.png" alt="Cultivate Arts" class='nav-logo'>
                     </div>
                 </li>
                 <li class="nav-item"><a href="./gallary.html" class="nav-link">Gallery</a></li>
@@ -56,7 +56,7 @@
     <div id="welcome-box" class="welcome-box-container sep-margin">
         <div class="welcome-box-content-container">
             <div class="welcome-text-container">
-                <h1>Welcome to <br /> Cultivate Arts</h1>
+                <h1>Welcome to <br> Cultivate Arts</h1>
                 <h3>A showcase of handmade gifts and products</h3>
                 <button type="button" id="welcome-button">
                     Let's get started
@@ -137,7 +137,7 @@
             <h1>Upcoming Events</h1>
             <iframe
                 src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%239ada97&ctz=America%2FNew_York&showTitle=0&showNav=0&showPrint=0&showTabs=0&showCalendars=0&src=ZWQzZmIxNjI0ZDcyNzIyYTIyYWIwYjM1NDExNGE5M2FlMThkZWU3Mjc3YTlkYzNjZjQ5NDZjZDg0YzkwMjYyMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23795548"
-                style="border-width:0" width="800" height="600" frameborder="0" scrolling="no" class="cal">
+                style="border-width:0" width="800" height="600" class="cal">
             </iframe>
         </div>
 
@@ -164,14 +164,6 @@
 
 
     </footer>
-    </div>
-
-
-
-
-
-
-    </div>
 </body>
 
 </html>
