--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <img src="./images/navlogo.png" alt="Cultivate Arts" class='nav-logo'>
                     </div>
                 </li>
-                <li class="nav-item"><a href="./gallary.html" class="nav-link">Gallery</a></li>
+                <li class="nav-item"><a href="./gallery.html" class="nav-link">Gallery</a></li>
                 <li class="nav-item"><a href="https://github.com" class="nav-link">Contact</a></li>
             </ul>
         </nav>
@@ -85,26 +85,27 @@
             <div class="featured-items-container">
                 <div class="featured-item-card">
                     <div class="featured-img">
-                        <img src="./images/317052848_523985909788749_1734868901847570596_n.jpg" alt="featured item">
+                        <img src="./images/1.jpg" alt="featured item">
                     </div>
                     <div class=" featured-backing">
                     </div>
                 </div>
                 <div class="featured-item-card">
                     <div class="featured-img">
-                        <img src="./images/318208183_1569074693533016_6120038406039452861_n.jpg" alt="featured item">
+                        <img src="./images/11.jpg" alt="featured item">
                     </div>
                     <div class="featured-backing"></div>
                 </div>
                 <div class="featured-item-card">
                     <div class="featured-img">
-                        <img src="./images/317841761_2246425578869596_7970363144033728300_n.jpg" alt="featured item">
+                        <img src="./images/14.jpg" alt="featured item">
                     </div>
                     <div class="featured-backing"></div>
                 </div>
             </div>
 
-            <button type="button" class="gallery-button">See Full Gallary </button>
+            <button type="button" class="gallery-button" onclick="window.location.href='gallery.html'">See Full Gallary
+            </button>
         </div>
         <div id="devider"></div>
     </div>
