--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-
+    <!-- IMAGE GALLERY -->
     <div id="gallery">
         <div class="gallery-container">
             <img src="./images/1.jpg" alt="Product Image">
@@ -49,8 +49,8 @@
         </div>
     </div>
 
-
-    <footer id="gallery-footer">
+    <!-- FOOTER -->
+    <footer>
         <div class="footer-content-container">
             <p class="copyright"> &copy;
                 <script>document.write(new Date().getFullYear())</script> Cultivate Arts
@@ -65,6 +65,7 @@
 
 
     </footer>
+
 
 </body>
 
