--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <nav id="nav-container">
             <ul class="nav-list">
                 <li class="nav-item"><a href="./index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="https://github.com" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="./contact.html" class="nav-link">Contact</a></li>
                 <li class="nav-item">
                     <div class="nav-logo-container">
                         <img src="./images/navlogo.png" alt="Cultivate Arts" class='nav-logo'>
                     </div>
                 </li>
                 <li class="nav-item"><a href="./gallery.html" class="nav-link">Gallery</a></li>
-                <li class="nav-item"><a href="https://github.com" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="./joinus.html" class="nav-link">Join Us</a></li>
             </ul>
         </nav>
     </header>
@@ -150,16 +150,16 @@
 
 
     <!-- FOOTER -->
-    <footer>
+    <footer id="index-footer">
         <div class="footer-content-container">
             <p class="copyright"> &copy;
                 <script>document.write(new Date().getFullYear())</script> Cultivate Arts
             </p>
             <ul class="footer-nav">
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./gallary.html">Gallery</a></li>
-                <li><a href="https://github.com">Contact</a></li>
+                <li><a href="./joinus.html">Join Us</a></li>
             </ul>
         </div>
 
